# burgerzilla-food-order-management

./: .gitignore  .pre-commit-config.yaml  .style.yapf  LICENSE  README.md  pyproject.toml
1_customer_service/: Dockerfile  README.md  config.py  docker-compose.yml  run.py
1_customer_service/customer_application/: __init__.py  model_validation.py  models.py
1_customer_service/customer_application/customer_api/: __init__.py  customer_utils.py  routes.py
1_customer_service/tests/: example_data.py  test_helpers.py
1_customer_service/utils/: helpers.py
2_order_service/: .gittignore  README.md  config.py  db_config.ini  run.py
2_order_service/order_application/: __init__.py  models.py
2_order_service/order_application/order_api/: __init__.py  order_utils.py  routes.py
2_order_service/tests/: example_data.py
2_order_service/utils/: helpers.py
2_restaurant_service/: config.py  run.py
2_restaurant_service/restaurant_application/: __init__.py  cities.py  models.py
3_project_docs/: burgerzilla_db_schema.md
3_restaurant_service/: README.md  config.py  helpers.py  restaurant_database.bat  run.py
3_restaurant_service/restaurant_application/: __init__.py  models.py
3_restaurant_service/tests/: example_data.py  test_helpers.py
3_restaurant_service/utils/: helpers.py
4_project_docs/: burgerzilla_api_ref.md  burgerzilla_api_reference.md  burgerzilla_db_schema.md  burgerzilla_libraries_reference.md  burgerzilla_project_management.md
customer_ms/: Dockerfile  README.md  config.py  db_initialize.bat  pyproject.toml  run.py
customer_ms/customer_application/: __init__.py  model_validation.py  models.py
customer_ms/customer_application/customer_api/: __init__.py  customer_utils.py  routes.py
customer_ms/tests/: example_data.py  test_helpers.py
customer_ms/utils/: helpers.py
docs/: burgerzilla_api_reference.md  burgerzilla_db_schema.md  burgerzilla_libraries_reference.md
order_ms/: .env  config.py  pyproject.toml  run.py
order_ms/order_application/: __init__.py  models.py
order_ms/order_application/order_api/: __init__.py  order_utils.py  routes.py
order_ms/tests/: example_data.py  test_helpers.py
order_ms/utils/: helpers.py
restaurant_ms/: .gittignore  README.md  config.py  db_initialize.bat  pyproject.toml  run.py
restaurant_ms/restaurant_application/: __init__.py  models.py
restaurant_ms/restaurant_application/restaurant_api/: __init__.py  routes.py
restaurant_ms/tests/: example_data.py  test_helpers.py
(+3 files in other folders)
