[tool.poetry]
name = "burgerzilla"
version = "0.1.0"
description = "Burgerzilla is aiming to create bridge betwen customers and restaurants to operate various operations."
authors = ["Hasan Özdemir <hasanozdemir1@trakya.edu.tr>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "~=1.1.1"
python-dotenv = "~=0.19.2"
SQLAlchemy = "~=1.3.15"
alembic = "~=1.4.2"
config = "~=0.5.1"
passlib = "~=1.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
