[tool.poetry]
name = "burgerzilla"
version = "0.1.0"
description = "Burgerzilla is aiming to create bridge betwen customers and restaurants to operate various operations."
authors = ["Hasan Özdemir <hasanozdemir1@trakya.edu.tr>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "2.0.3"
python-dotenv = "~=0.19.2"
SQLAlchemy = "~=1.3.15"
alembic = "~=1.4.2"
config = "~=0.5.1"
passlib = "~=1.7.4"
Flask-Migrate = "^3.1.0"
Flask-Login = "^0.5.0"
blinker = "^1.4"
psycopg2 = "^2.9.3"
email-validator = "^1.1.3"
typing-extensions = "^4.0.1"
pydantic = "^1.9.0"
flake8 = "^4.0.1"
Flask-JWT-Extended = "^4.3.1"
requests = "^2.27.1"
black = "^22.1.0"
pytest = "^7.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"